--- a/masterapp/flashy.css
+++ b/masterapp/flashy.css
@@ -21,9 +21,10 @@ div {
 }
 
 div#actionItem {
-  border: 1px solid black;
-  width: 70%;
-  height: 40%;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 100px;
+  font-weight: bold;
+  font-color: #ffffff;
 }
 
 div#roomiddiv {
@@ -99,6 +100,12 @@ span.player {
   font-size: 20px;
   font-weight: bold;
   font-family: 'Josefin Sans', sans-serif;
+  background-color: #EFC94C;
+  border-radius: 15px;
+}
+
+span.voted i {
+  color: #455E69;
 }
 
 div#feelsMenu {
@@ -106,11 +113,14 @@ div#feelsMenu {
 }
 
 span#remainingTime {
-  border: 1px black solid;
+  border: none;
   display: inline-block;
   position: absolute;
+  background-color: #EFC94C;
   left: 0px;
   top: 0px;
   height: 50px;
-  width: 100%;
+  width: 0;
 }
+
+
